# deep_learining_project

./: .gitignore  README.md  app_streamlit.py  main.py  preprocessing.ipynb  pyproject.toml
