[project]
name = "deep-learining-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "huggingface_hub>=1.19.0",
    "iterative-stratification>=0.1.9",
    "matplotlib>=3.10.0",
    "optuna>=4.9.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
    "streamlit>=1.40.0",
    "torch==2.12.0+cu130",
    "transformers>=5.11.0",
]

[tool.uv]
torch-backend = "cu130"

[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu130/torch-2.12.0%2Bcu130-cp312-cp312-win_amd64.whl" }

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
